syntax = "proto3";

package stats;

option go_package = "github.com/Q0un/architect/proto/stats";

message StatsEvent {
    uint64 ticket_id = 1;
    uint64 user_id = 2;
    string type = 3;
}

message TicketInfo {
    uint64 ticket_id = 1;
    uint64 author_id = 2;
    uint64 count = 3;
}

message UserInfo {
    uint64 user_id = 1;
    uint64 likes = 2;
}
